@@ -340,3 +340,4 @@ Apr/May, 2012
 June, 2012
 	Fix bug in trace controller
 	(1.7.2)
+	Add locarna_n code, alpha status
